@@ -1,5 +1,8 @@
 2012-03-04  Moritz Bunkus  <moritz@bunkus.org>
 
+	* mkvmerge: enhancement: MicroDVD text subtitles are recognized as
+	an unsupported format instead of an unknown format.
+
 	* mmg: The warning that no default duration/FPS has been given for
 	AVC/h.264 tracks has been removed.
 
